--- a/styleGeral.css
+++ b/styleGeral.css
@@ -1,9 +1,10 @@
-﻿*{margin:0;padding:0;outline:none;}
-body{font:normal 16px Arial;color:#333;background:url("http://images.lucasanimador.com.br/conteudo-bg.png")}
+﻿*{margin:0;padding:0;outline:none}
+body{font:normal 16px Arial;color:#333;background:url("./lucasanimador/images/conteudo-bg.png")}
 ol, ul {list-style: none;}
 a{text-decoration:none;color:#064faa}
 a:hover{text-decoration:underline}
 img{border:none}
+input, textarea, form, label {font: normal 20px Arial;color:#333}
 
 /*  classes gerais 
 ------------------------------------------------------------------------------------------------------------------*/
@@ -19,7 +20,7 @@ img{border:none}
 .boxGigante{padding:130px}
 .boxBranco{padding-left:0;padding-right:0}
 .boxIcone{position:absolute;bottom:20px;right:380px;}
-.lista li{background:url("http://images.lucasanimador.com.br/bullet-check.png") no-repeat;padding:0 0 7px 30px;line-height:22px}
+.lista li{background:url("./lucasanimador/images/bullet-check.png") no-repeat;padding:0 0 7px 30px;line-height:22px}
 
 /*  elementos gerais
 ------------------------------------------------------------------------------------------------------------------*/
@@ -38,14 +39,14 @@ p{padding-bottom:18px}
 #guardaLinhasEscudos > div,#guardaLinhaVerde > div{margin:0 auto;position:relative;width:996px}
 
 #guardaLinhasEscudos{z-index:10;width:100%;position:fixed}
-#linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:2000px;background:url(http://images.lucasanimador.com.br/linha-html5-css3-javascript.png) repeat-y}
+#linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:3000px;background:url(./lucasanimador/images/linha-html5-css3-javascript.png) repeat-y}
 
 #guardaLinhaVerde{z-index:90}
-#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:9000px;background:url("http://images.lucasanimador.com.br/linha-vertical-verde.png") repeat-y}
+#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:9103px;background:url("./lucasanimador/images/linha-vertical-verde.png") repeat-y;overflow:hidden}
 
 /*  topo
 ------------------------------------------------------------------------------------------------------------------*/
-#guardaCabecalho{background:#e9e9e9 url("http://images.lucasanimador.com.br/header-bg.jpg") repeat-x;width:100%;position:fixed;top:0;left:0;right:0;clear:both;display:table;z-index:50;display:block}
+#guardaCabecalho{background:#e9e9e9 url("./lucasanimador/images/header-bg.jpg") repeat-x;width:100%;position:fixed;top:0;left:0;right:0;clear:both;display:table;z-index:50;display:block}
 #guardaCabecalho header{float:left;width:100%}
 #guardaCabecalhoTopo{float:left;width:100%;padding:10px 0 16px}
 #cabecalhoTopo{margin:0 auto;width:996px}
@@ -62,14 +63,14 @@ p{padding-bottom:18px}
 #escudosTopo li #escudoCss3{background-position:-76px 0}
 #escudosTopo li #escudoJs{background-position:-114px 0}
 #guardaCabecalhoNav{float:left;width:100%;background:#F0F0F0;border-top:1px solid #CCC}
-#guardaCabecalhoNav nav{margin:0 auto;width:996px}
+#guardaCabecalhoNav nav{margin:0 auto;width:996px;display:block}
 #guardaCabecalhoNav ul{float:left;margin-left:10px;font-size:18px}
 #guardaCabecalhoNav li{float:left;margin:0 16px}
 #guardaCabecalhoNav a{float:left;color:#4D4D4D;border-bottom:2px solid #F0F0F0;padding:10px 20px 6px 20px;text-decoration:none;}
 #guardaCabecalhoNav a:hover{border-color:#AAA}
 #guardaCabecalhoNav a.marcado{border-color:#0873b9}
 #guardaCabecalhoNav img{float:left;padding-bottom:5px;width:16px;height:16px}
-#sombraCabecalho{position:absolute;bottom:-4px;left:0;width:100%;height:5px;background:url("http://images.lucasanimador.com.br/menu-sombra-inferior.png") repeat-x}
+#sombraCabecalho{position:absolute;bottom:-4px;left:0;width:100%;height:5px;background:url("./lucasanimador/images/menu-sombra-inferior.png") repeat-x}
 
 
 /*  conteudo
@@ -107,7 +108,6 @@ p{padding-bottom:18px}
 .boxHabilidade div > span{position:absolute;bottom:2px;left:2px;width:6px;height:86px;background:#94bcdc}
 .boxHabilidade > :first-child{float:left;margin:16px 0 0 16px;width:60px;height:60px;background-image:url("./images/habilidades-sprite.png")}
 /* Habilidades > Skills */
-/*		---		1=26px		---		2=34px		---		3=43px		---		4=52px		---		5=60px		---		6=69px		---		7=77px		---		*/
 #skLogica{background-position:-840px 0}#skHtml5{background-position:-540px 0}#skCss3{background-position:-300px 0}#skJs{background-position:-660px 0}
 #skJquery{background-position:-720px 0}#skParallax{background-position:-1080px 0}#skAjax{background-position:-60px 0}#skCross{background-position:-240px 0}
 #skWStandards{background-position:-1560px 0}#skMobile{background-position:-900px 0}#skResponsive{background-position:-1260px 0}#skSeo{background-position:-1380px 0}
@@ -116,11 +116,13 @@ p{padding-bottom:18px}
 #skMvc{background-position:-960px 0}#skOop{background-position:-1020px 0}#skScrum{background-position:-1320px 0}#skIngles{background-position:-600px 0}
 #skFlash{background-position:-360px 0}#skGimp{background-position:-420px 0}#skPhotoshop{background-position:-1140px 0}#skAnimacao{background-position:-1680px 0}
 #skRoteiro{background-position:-1920px 0}#skStoryboard{background-position:-2040px 0}#skDesenho{background-position:-1800px 0}#skCharDesing{background-position:-1740px 0}
-#skSom{background-position:-1980px 0}#skDirecaoArte{background-position:-1860px 0}#nvLogica{height:77px}#nvHtml5{height:60px}#nvCss3{height:60px}#nvJs{height:69px}
-#nvJquery{height:69px}#nvParallax{height:69px}#nvAjax{height:69px}#nvCross{height:69px}#nvWStandards{height:69px}#nvMobile{height:52px}#nvResponsive{height:52px}
-#nvSeo{height:69px}#nvSvn{height:69px}#nvGit{height:52px}#nvUx{height:60px}#nvAnalytics{height:60px}#nvXml{height:60px}#nvJson{height:52px}#nvPhp{height:43px}#nvCpanel{height:60px}
-#nvAgnitio{height:52px}#nvMvc{height:60px}#nvOop{height:60px}#nvScrum{height:34px}#nvIngles{height:34px}#nvFlash{height:43px}#nvGimp{height:60px}#nvPhotoshop{height:34px}
-#nvAnimacao{height:60px}#nvRoteiro{height:43px}#nvStoryboard{height:43px}#nvDesenho{height:60px}#nvCharDesign{height:60px}#nvSom{height:34px}#nvDirecaoArte{height:34px}
+#skSom{background-position:-1980px 0}#skDirecaoArte{background-position:-1860px 0}
+/*		---		1=26px		---		2=34px		---		3=43px		---		4=52px		---		5=60px		---		6=69px		---		7=77px		---		*/
+#nvLogica{height:77px}#nvHtml5{height:52px}#nvCss3{height:52px}#nvJs{height:69px}#nvJquery{height:60px}#nvParallax{height:69px}#nvAjax{height:60px}
+#nvCross{height:69px}#nvWStandards{height:69px}#nvMobile{height:43px}#nvResponsive{height:34px}#nvSeo{height:69px}#nvSvn{height:60px}#nvGit{height:43px}
+#nvUx{height:60px}#nvAnalytics{height:52px}#nvXml{height:60px}#nvJson{height:52px}#nvPhp{height:43px}#nvCpanel{height:60px}#nvAgnitio{height:43px}
+#nvMvc{height:60px}#nvOop{height:60px}#nvScrum{height:34px}#nvIngles{height:34px}#nvFlash{height:34px}#nvGimp{height:60px}#nvPhotoshop{height:26px}
+#nvAnimacao{height:60px}#nvRoteiro{height:43px}#nvStoryboard{height:43px}#nvDesenho{height:60px}#nvCharDesign{height:52px}#nvSom{height:34px}#nvDirecaoArte{height:34px}
 
 /* Formação */
 #iconeAnimacao{width:114px;height:49px;background-position:-890px 0}
@@ -133,14 +135,28 @@ p{padding-bottom:18px}
 #expSemImg{margin:60px auto;display:block}
 
 /* Contato */
-
+#guardaFormContato{float:left;width:470px}
+#guardaFormContato div,
+#guardaFormContato span,
+#guardaFormContato input,
+#guardaFormContato textarea{float:left;background:none;border:0}
+#guardaFormContato div{background:#fff;border:2px solid #c4c4c4;padding:15px;width:436px;border-radius:5px}
+#guardaFormContato div:hover{border-color:#AAA}
+#guardaFormContato span{height:26px;text-align:right;width:100%;font-size:12px;padding-top:4px;color:#7f0000;visibility:hidden}
+#guardaFormContato span.mostrar{visibility:visible}
+#guardaFormContato div input{width:430px}
+#guardaFormContato textarea{width:430px;height:130px;overflow:hidden;max-width:430px;min-width:430px;max-height:130px;min-height:130px;}
+#guardaFormContato #btnEnviar{padding:15px 0;width:140px;float:right;display:block;margin-bottom:4px;border:0;background:#079961;border-radius:5px;color:#FFF;cursor:pointer}
+#guardaFormContato #btnEnviar:hover{background:#08a56d}
+#guardaFormContato #btnEnviar.enviando{background:#b2b2b2;cursor:default}
+#guardaFormContato #msgOk{color:#079961}
 
 /* Parallax Scroll */
 
-body#prlxOk{height:28000px;background:none}
+body#prlxOk{height:28700px;background:none}
 #prlxOk #guardaLinhasEscudos,
 #prlxOk #guardaLinhaVerde{position:fixed}
-#prlxOk #guardaLinhasEscudos{height:100%;background:url("http://images.lucasanimador.com.br/conteudo-bg.png")}
+#prlxOk #guardaLinhasEscudos{height:100%;background:url("./lucasanimador/images/conteudo-bg.png")}
 #prlxOk #linhasEscudos,
 #prlxOk #linhaVerde{height:0;overflow:hidden}
 #prlxOk #guardaContent{position:fixed;top:0;left:0;height:4400px}
