--- a/styleGeral.css
+++ b/styleGeral.css
@@ -42,7 +42,7 @@ p{padding-bottom:18px}
 #linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:3000px;background:url(http://images.lucasanimador.com.br/linha-html5-css3-javascript.png) repeat-y}
 
 #guardaLinhaVerde{z-index:90}
-#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:9103px;background:url("http://images.lucasanimador.com.br/linha-vertical-verde.png") repeat-y;overflow:hidden}
+#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:9020px;background:url("http://images.lucasanimador.com.br/linha-vertical-verde.png") repeat-y;overflow:hidden}
 
 /*  topo
 ------------------------------------------------------------------------------------------------------------------*/
@@ -66,18 +66,18 @@ p{padding-bottom:18px}
 #guardaCabecalhoNav nav{margin:0 auto;width:996px;display:block}
 #guardaCabecalhoNav ul{float:left;margin-left:10px;font-size:18px}
 #guardaCabecalhoNav li{float:left;margin:0 16px}
-#guardaCabecalhoNav a{float:left;color:#4D4D4D;border-bottom:2px solid #F0F0F0;padding:10px 20px 6px 20px;text-decoration:none;}
+#guardaCabecalhoNav a{float:left;color:#4D4D4D;border-bottom:3px solid #F0F0F0;padding:10px 20px 5px 20px;text-decoration:none;}
 #guardaCabecalhoNav a:hover{border-color:#AAA}
-#guardaCabecalhoNav a.marcado{border-color:#0873b9}
+#guardaCabecalhoNav a.marcado{border-color:#079961}
 #guardaCabecalhoNav img{float:left;padding-bottom:5px;width:16px;height:16px}
-#sombraCabecalho{position:absolute;bottom:-4px;left:0;width:100%;height:5px;background:url("http://images.lucasanimador.com.br/menu-sombra-inferior.png") repeat-x}
+#sombraCabecalho{position:absolute;bottom:-5px;left:0;width:100%;height:5px;background:url("http://images.lucasanimador.com.br/menu-sombra-inferior.png") repeat-x}
 
 
 /*  conteudo
 ------------------------------------------------------------------------------------------------------------------*/
 #guardaContent{float:left;width:100%;position:relative;z-index:20}
 #content{margin:0 auto;width:996px}
-#content section{float:left;float:left;width:960px;padding:147px 0 183px 30px}
+#content section{float:left;width:960px;padding:147px 0 183px 30px}
 
 /* Home */
 #listaHome li{float:left;padding:0 30px 30px 0}
@@ -135,6 +135,7 @@ p{padding-bottom:18px}
 #expSemImg{margin:60px auto;display:block}
 
 /* Contato */
+#content section.padBt40{padding-bottom:80px!important}
 #guardaFormContato{float:left;width:470px}
 #guardaFormContato div,
 #guardaFormContato span,
@@ -146,10 +147,17 @@ p{padding-bottom:18px}
 #guardaFormContato span.mostrar{visibility:visible}
 #guardaFormContato div input{width:430px}
 #guardaFormContato textarea{width:430px;height:130px;overflow:hidden;max-width:430px;min-width:430px;max-height:130px;min-height:130px;}
-#guardaFormContato #btnEnviar{padding:15px 0;width:140px;float:right;display:block;margin-bottom:4px;border:0;background:#079961;border-radius:5px;color:#FFF;cursor:pointer}
+#guardaFormContato #btnEnviar{padding:15px 0;width:140px;float:right;display:block;margin-bottom:4px;border:0;background:#079961;border-radius:5px;color:#FFF;cursor:pointer;text-align:center}
 #guardaFormContato #btnEnviar:hover{background:#08a56d}
 #guardaFormContato #btnEnviar.enviando{background:#b2b2b2;cursor:default}
-#guardaFormContato #msgOk{color:#079961}
+#guardaFormContato #msgOk{color:#079961;font-size:14px}
+#guardaInfosContato{float:left;width:350px;height:408px;border:7px solid #b4b4b4;background:#FFF;margin-left:50px;font-size:18px;line-height:36px}
+#iconePrancheta{float:left;background-position:-790px 0;width:100px;height:100px;margin:14px 0 30px 142px}
+#guardaInfosContato li{float:left;width:330px;padding-left:20px;height:50px}
+.iconeContato{background-image:url("./images/contato-sprite.png");background-repeat:no-repeat;margin-right:10px;width:26px;height:26px;float:left}
+#iconEmail{background-position:-26px 2px}
+#iconLinkedin{background-position:-52px 0}
+
 
 /* Parallax Scroll */
 
