# otimização do css

--- a/style.css
+++ b/style.css
@@ -1,113 +1,4 @@
-﻿*{margin:0;padding:0;outline:none}
-body{font:normal 16px Arial;color:#333;background:url("http://images.lucasanimador.com.br/conteudo-bg.png")}
-ol, ul {list-style: none;}
-a{text-decoration:none;color:#064faa}
-a:hover{text-decoration:underline}
-img{border:none}
-input, textarea, form, label {font: normal 20px Arial;color:#333}
-
-/*  classes gerais 
-------------------------------------------------------------------------------------------------------------------*/
-.separaConteudo{float:left;width:100%;padding-bottom:40px}
-.iconePb{background-image:url("http://lucasdasilvasoares.github.io/images/icones-pb-sprite.png");background-repeat:no-repeat}
-.iconeExperiencia{width:100px;height:100px;background-position:-590px 0}
-.guardaBox{float:left;background:#f0f0f0;border:8px solid #b2b2b2;position:relative}
-.boxCinza{float:left;width:460px;padding:20px;padding-right:0;padding-bottom:30px}
-.boxBranco{float:left;width:360px;text-align:center;background:#FFF}
-.boxBranco img{width:270px;height:190px}
-.boxMedio{padding:40px}
-.boxMaior{padding:90px}
-.boxGigante{padding:130px}
-.boxBranco{padding-left:0;padding-right:0}
-.boxIcone{position:absolute;bottom:20px;right:380px;}
-.lista li{background:url("http://images.lucasanimador.com.br/bullet-check.png") no-repeat;padding:0 0 7px 30px;line-height:22px}
-
-/*  elementos gerais
-------------------------------------------------------------------------------------------------------------------*/
-h1 {padding-bottom:30px;font-size:30px}
-h2 {padding-bottom:20px;font-size:22px}
-h3{padding-bottom:18px;font-size:16px}
-p{padding-bottom:18px}
-
-/*  div gerais
-------------------------------------------------------------------------------------------------------------------*/
-#guardaTudo{float:left;width:100%}
-
-/*  linhas escudos
-------------------------------------------------------------------------------------------------------------------*/
-#guardaLinhasEscudos,#guardaLinhaVerde{position:absolute;top:0;left:0;width:100%}
-#guardaLinhasEscudos > div,#guardaLinhaVerde > div{margin:0 auto;position:relative;width:996px}
-
-#guardaLinhasEscudos{z-index:10;width:100%;position:fixed}
-#linhasEscudos{position:absolute;top:112px;right:82px;width:118px;height:3000px;background:url(http://images.lucasanimador.com.br/linha-html5-css3-javascript.png) repeat-y}
-
-#guardaLinhaVerde{z-index:90}
-#linhaVerde{position:absolute;top:0;right:4px;width:50px;height:9020px;background:url("http://images.lucasanimador.com.br/linha-vertical-verde.png") repeat-y;overflow:hidden}
-
-/*  topo
-------------------------------------------------------------------------------------------------------------------*/
-#guardaCabecalho{background:#e9e9e9 url("http://images.lucasanimador.com.br/header-bg.jpg") repeat-x;width:100%;position:fixed;top:0;left:0;right:0;clear:both;display:table;z-index:50;display:block}
-#guardaCabecalho header{float:left;width:100%}
-#guardaCabecalhoTopo{float:left;width:100%;padding:10px 0 16px}
-#cabecalhoTopo{margin:0 auto;width:996px}
-#logoTopo{float:left;width:296px}
-#logoTopo a{position:relative;display:block;color:#4D4D4D}
-#logoTopo a > span:first-child{font-size:24px;float:right}
-#logoTopo a > span:first-child > span{float:left;padding-top:7px}
-#logoTopo a > span:first-child > span:first-child{font-weight:bold;color:#FFF;text-align:center;width:38px;height:38px;background:url("http://lucasdasilvasoares.github.io/images/escudo-sprite.png") no-repeat;}
-#logoTopo a > span#logoDesc{font-size:16px;position:absolute;top:36px;right:0}
-#escudosTopo{float:right;padding:6px 64px 0 0}
-#escudosTopo li{float:left;padding-left:10px}
-#escudosTopo li a{float:left;width:38px;height:44px;background:url("http://lucasdasilvasoares.github.io/images/escudo-sprite.png") no-repeat}
-#escudosTopo li #escudoHtml5{background-position:-38px 0}
-#escudosTopo li #escudoCss3{background-position:-76px 0}
-#escudosTopo li #escudoJs{background-position:-114px 0}
-#guardaCabecalhoNav{float:left;width:100%;background:#F0F0F0;border-top:1px solid #CCC}
-#guardaCabecalhoNav nav{margin:0 auto;width:996px;display:block}
-#guardaCabecalhoNav ul{float:left;margin-left:10px;font-size:18px}
-#guardaCabecalhoNav li{float:left;margin:0 16px}
-#guardaCabecalhoNav a{float:left;color:#4D4D4D;border-bottom:3px solid #F0F0F0;padding:10px 20px 5px 20px;text-decoration:none;}
-#guardaCabecalhoNav a:hover{border-color:#AAA}
-#guardaCabecalhoNav a.marcado{border-color:#079961}
-#guardaCabecalhoNav img{float:left;padding-bottom:5px;width:16px;height:16px}
-#sombraCabecalho{position:absolute;bottom:-5px;left:0;width:100%;height:5px;background:url("http://images.lucasanimador.com.br/menu-sombra-inferior.png") repeat-x}
-
-
-/*  conteudo
-------------------------------------------------------------------------------------------------------------------*/
-#guardaContent{float:left;width:100%;position:relative;z-index:20}
-#content{margin:0 auto;width:996px}
-#content section{float:left;width:960px;padding:147px 0 183px 30px}
-
-/* Home */
-#listaHome li{float:left;padding:0 30px 30px 0}
-#listaHome li a{float:left;display:block;width:420px;height:195px;color:#fafafa;background:#079961;position:relative;text-decoration:none}
-#listaHome li a span{cursor:pointer}
-#listaHome li a.quadrado{width:195px}
-#listaHome #bgVermelho{background:#e34f26}
-#listaHome #bgAmarelo{background:#e5a32b}
-#listaHome #bgAzul{background:#0873b9}
-#listaHome li a.quadrado span:first-child{font-size:29px}
-#listaHome li a span:first-child{float:left;font-size:40px;padding: 18px 0 0 18px}
-#listaHome li a span.iconePb{position:absolute;bottom:20px;right:20px}
-#listaHome li a span.luzMarcado{position:absolute;bottom:0;right:0;width:100%;height:0;background:#FFF;transition:300ms;opacity:0.16;filter:alpha(opacity=16)}
-#listaHome li a:hover span.luzMarcado{height:100%}
-#iconeHabilidades{width:120px;height:120px}
-#iconeFormacao{width:100px;height:100px;background-position:-690px 0}
-#iconePortfolio{width:120px;height:120px;background-position:-120px 0}
-#iconeContato{width:120px;height:120px;background-position:-240px 0}
-
-/* Parallax Scroll */
-
-body#prlxOk{height:28700px;background:none}
-#prlxOk #guardaLinhasEscudos,
-#prlxOk #guardaLinhaVerde{position:fixed}
-#prlxOk #guardaLinhasEscudos{height:100%;background:url("http://images.lucasanimador.com.br/conteudo-bg.png")}
-#prlxOk #linhasEscudos,
-#prlxOk #linhaVerde{height:0;overflow:hidden}
-#prlxOk #guardaContent{position:fixed;top:0;left:0;height:4400px}
-
-/* Habilidades */
+﻿/* Habilidades */
 #habilidadesResumo img{float:left;margin-bottom:40px;border-radius:200px;box-shadow:2px 2px 7px #777;width:220px;height:220px}
 #habilidadesResumo p{float:left;padding:40px 0 0 40px;width:520px}
 #listaHabilidades{float:left;width:860px;font-size:13px}
