--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-﻿/* Habilidades */
+﻿/* Linhas topo */
+#linhasEscudos{height:3000px}
+#linhaVerde{height:height:9020px}
+
+/* Habilidades */
 #habilidadesResumo img{float:left;margin-bottom:40px;border-radius:200px;box-shadow:2px 2px 7px #777;width:220px;height:220px}
 #habilidadesResumo p{float:left;padding:40px 0 0 40px;width:520px}
 #listaHabilidades{float:left;width:860px;font-size:13px}
