--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 #linhasEscudos{height:3000px}
 #linhaVerde{height:height:9020px}
 
+/* Parallax Scroll */
+#prlxOk #linhasEscudos,
+#prlxOk #linhaVerde{height:0}
+
 /* Habilidades */
 #habilidadesResumo img{float:left;margin-bottom:40px;border-radius:200px;box-shadow:2px 2px 7px #777;width:220px;height:220px}
 #habilidadesResumo p{float:left;padding:40px 0 0 40px;width:520px}
